# Sierpinski-figures

./: .gitignore  LICENSE.md  README.md  Sierpinski triangle 3D.py  Sierpinski-triangle.py  conf.py  index.rst  pyproject.toml
docs/: index.md  sierpinski_pyramid.md  sierpinski_triangle.md  theory.md  usage.md
examples/: chaos_game.py  convergence_visualizer.py  coverage_analyzer.py
src/: Sierpinski pyramid.py  Sierpinski triangle.py
