[tool.poetry]
name = "sierpinski-figures"
version = "0.1.0"
description = ""
authors = ["Kacper <74537153+KasmyrA@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
